--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ cache:
   directories:
     - node_modules
 
-after_success:
-  - surge --project .
+before_deploy: "gulp build"
+
+deploy:
+  provider: surge
+  project: ./build/
