--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   directories:
     - node_modules
 
-before_deploy: "gulp build"
+before_deploy: "npm run build"
 
 deploy:
   provider: surge
