Move netlify from surge.sh
- Add netlify_deploy.sh
- Change travis.yml deploy provider
- Add engines > node property to package.json
- Remove surge dependency from package.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,13 @@ cache:
   directories:
     - node_modules
 
-before_deploy: "npm run build"
+before_deploy:
+  - npm run build
+  - chmod +x ./scripts/netlify_deploy.sh
 
 deploy:
-  provider: surge
-  project: ./build/
+  provider: script
+  script: scripts/netlify_deploy.sh
   skip_cleanup: true
+  on:
+    branch: master
