--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "devDependencies": {
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-pug": "^3.2.0",
-    "surge": "^0.18.0"
+    "gulp-pug": "^3.2.0"
+  },
+  "engines": {
+    "node": "^6.11.3"
   }
 }
