Change the theme

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "gatsby build --prefix-paths",
     "deploy": "gh-pages -d public",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "preserve": "npm run build",
     "serve": "gatsby serve",
     "start": "npm run develop",
