--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
   "homepage": "https://github.com/hisener/halilsener.com#readme",
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
-    "dashify": "^1.0.0",
     "dateformat": "^2.2.0",
-    "gatsby": "^1.9.175",
+    "gatsby": "^1.9.178",
     "gatsby-cli": "^1.1.33",
     "gatsby-link": "^1.6.35",
     "gatsby-plugin-canonical-urls": "^1.0.12",
@@ -47,6 +46,7 @@
     "gatsby-source-filesystem": "^1.5.16",
     "gatsby-transformer-remark": "^1.7.30",
     "gh-pages": "^0.12.0",
+    "lodash.kebabcase": "^4.1.1",
     "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
     "react-disqus-thread": "^0.4.0",
