--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "description": "My personal webpage",
   "scripts": {
     "build": "gatsby build --prefix-paths",
-    "deploy": "gh-pages -d public",
     "dev": "gatsby develop",
     "serve": "gatsby serve",
-    "start": "npm run develop",
+    "start": "npm run dev",
     "format": "prettier --trailing-comma es5 --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: No tests specified.!\""
   },
@@ -23,39 +22,38 @@
   },
   "homepage": "https://github.com/hisener/halilsener.com#readme",
   "devDependencies": {
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap-sass": "^3.4.1",
     "dateformat": "^2.2.0",
-    "gatsby": "^1.9.178",
-    "gatsby-cli": "^1.1.33",
-    "gatsby-link": "^1.6.35",
-    "gatsby-plugin-canonical-urls": "^1.0.12",
-    "gatsby-plugin-catch-links": "^1.0.15",
-    "gatsby-plugin-feed": "^1.3.16",
-    "gatsby-plugin-google-analytics": "^1.0.17",
+    "gatsby": "^1.9.279",
+    "gatsby-cli": "^1.1.58",
+    "gatsby-link": "^1.6.46",
+    "gatsby-plugin-canonical-urls": "^1.0.18",
+    "gatsby-plugin-catch-links": "^1.0.26",
+    "gatsby-plugin-feed": "^1.3.25",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-manifest": "^1.0.13",
-    "gatsby-plugin-nprogress": "^1.0.11",
+    "gatsby-plugin-nprogress": "^1.0.14",
     "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sass": "^1.0.16",
-    "gatsby-plugin-sharp": "^1.6.27",
-    "gatsby-plugin-sitemap": "^1.2.11",
-    "gatsby-remark-autolink-headers": "^1.4.11",
-    "gatsby-remark-copy-linked-files": "^1.5.25",
-    "gatsby-remark-images": "^1.5.41",
-    "gatsby-remark-prismjs": "^1.2.12",
+    "gatsby-plugin-sass": "^1.0.26",
+    "gatsby-plugin-sharp": "^1.6.48",
+    "gatsby-plugin-sitemap": "^1.2.25",
+    "gatsby-remark-autolink-headers": "^1.4.19",
+    "gatsby-remark-copy-linked-files": "^1.5.37",
+    "gatsby-remark-images": "^1.5.67",
+    "gatsby-remark-prismjs": "^1.2.24",
     "gatsby-remark-responsive-image": "next",
-    "gatsby-source-filesystem": "^1.5.16",
-    "gatsby-transformer-remark": "^1.7.30",
-    "gh-pages": "^0.12.0",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-remark": "^1.7.44",
     "lodash.kebabcase": "^4.1.1",
-    "prettier": "^1.10.2",
-    "prop-types": "^15.6.0",
+    "prettier": "^1.18.2",
+    "prop-types": "^15.7.2",
     "react-disqus-thread": "^0.4.0",
     "react-router-scroll": "github:ytase/react-router-scroll#build",
     "react-share": "^1.19.1",
-    "rimraf": "^2.6.2",
-    "uuid": "^3.2.1"
+    "rimraf": "^2.6.3",
+    "uuid": "^3.3.2"
   },
   "engines": {
-    "node": "^8.9.4"
+    "node": "^10.16.0"
   }
 }
